--- a/demo-springboot-web/Readme
+++ b/demo-springboot-web/Readme
@@ -8,3 +8,9 @@ Run demo.sprintboot.SpringBootConsoleApplication
 To build image and deploy from local
 
 To build image and deploy from Docker hub
+
+3. to launch with remote debug
+java -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=8000 -jarspring-boot-demo.jar
+then to attach for debug
+jdb -connect com.sun.jdi.SocketAttach:hostname=localhost,port=8000
+or use eclipse "Remote Java Application"
